# vlm-testbench

./: .dockerignore  .gitignore  AGENTS.md  README.md  TRITON_SETUP.md  deepseek_test.ipynb  docker-compose-cpu.yml  docker-compose.yml  kosmos2_test.ipynb  llava_test.ipynb  moondream_test.ipynb  pyproject.toml  qwen_test.ipynb  triton_client.py  triton_start.sh  vlm_utils.py
notebooks/: kosmos2_test.ipynb  kosmos2_test.py  llava_test.ipynb  llava_test.py  moondream_test.ipynb  moondream_test.py  triton_inference.ipynb  triton_inference.py
triton_models/kosmos2/: config.pbtxt
triton_models/kosmos2/1/: model.py
triton_models/llava/: config.pbtxt
triton_models/llava/1/: model.py
triton_models/moondream2/: config.pbtxt
triton_models/moondream2/1/: model.py
